--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://fspengler.github.io
-title: Fred`s Coding Blog 
+title: Fred's Coding Blog 
 subtitle: For mainly Ruby on Rails goodies.
 author: Frederico Spengler
 simple_search: http://google.com/search
