--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ date_format: "ordinal"
 subscribe_rss: /atom.xml
 subscribe_email:
 # RSS feeds can list your email address if you like
-email:
+email: spengler@gmail.com
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -90,8 +90,8 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name: fredscodingblog
+disqus_show_comment_count: true
 
 # Google Analytics
 google_analytics_tracking_id:
